Fix deployment issues: add vercel.json, package.json, rename files with spaces

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="flip-card flip-card-lux" data-id="kannur">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="Kannur Temple Visit/mridanga saileswari.jpg" onerror="this.src='home.jpg';"
+                                <img src="Kannur_Temple_Visit/mridanga saileswari.jpg" onerror="this.src='home.jpg';"
                                     alt="Kannur Temple Visit">
                                 <div class="flip-card-overlay">
                                     <h3>Kannur Temple Visit</h3>
@@ -268,7 +268,7 @@
                     <div class="flip-card flip-card-lux" data-id="honeymoon">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="kerala honeymoon.jpg" onerror="this.src='home.jpg';"
+                                <img src="kerala_honeymoon.jpg" onerror="this.src='home.jpg';"
                                     alt="Kerala Honeymoon Package">
                                 <div class="flip-card-overlay">
                                     <h3>Kerala Honeymoon Package</h3>
@@ -596,14 +596,14 @@
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/kalarivathukal.webp" alt="Kalarivathukal Temple">
+                            <img src="Kannur_Temple_Visit/kalarivathukal.webp" alt="Kalarivathukal Temple">
                             <div class="gallery-overlay">
                                 <h4>Kalarivathukal</h4>
                                 <p>Spiritual Heritage</p>
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/peralaserry pond.jpg" alt="Peralaserry Pond">
+                            <img src="Kannur_Temple_Visit/peralaserry pond.jpg" alt="Peralaserry Pond">
                             <div class="gallery-overlay">
                                 <h4>Peralaserry</h4>
                                 <p>Infinite Reflections</p>
@@ -617,14 +617,14 @@
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/mridanga saileswari.jpg" alt="Mridanga Saileswari">
+                            <img src="Kannur_Temple_Visit/mridanga saileswari.jpg" alt="Mridanga Saileswari">
                             <div class="gallery-overlay">
                                 <h4>Mridanga Saileswari</h4>
                                 <p>Divine Resonance</p>
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/parasanikadavu.jfif" alt="Parassanikadavu">
+                            <img src="Kannur_Temple_Visit/parasanikadavu.jfif" alt="Parassanikadavu">
                             <div class="gallery-overlay">
                                 <h4>Parassanikadavu</h4>
                                 <p>Muthappan's Abode</p>
@@ -640,14 +640,14 @@
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/kalarivathukal.webp" alt="Kalarivathukal Temple">
+                            <img src="Kannur_Temple_Visit/kalarivathukal.webp" alt="Kalarivathukal Temple">
                             <div class="gallery-overlay">
                                 <h4>Kalarivathukal</h4>
                                 <p>Spiritual Heritage</p>
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/peralaserry pond.jpg" alt="Peralaserry Pond">
+                            <img src="Kannur_Temple_Visit/peralaserry pond.jpg" alt="Peralaserry Pond">
                             <div class="gallery-overlay">
                                 <h4>Peralaserry</h4>
                                 <p>Infinite Reflections</p>
