--- a/package-details.html
+++ b/package-details.html
@@ -297,7 +297,7 @@
             const images = {
                 munnar: 'pine.jpg',
                 munnar_alleppey: 'alapuzha.jpg',
-                honeymoon: 'kerala honeymoon.jpg',
+                honeymoon: 'kerala_honeymoon.jpg',
                 south_india: 'palani.jpg',
                 mookambika: 'mookambika.jpg',
                 nalambalam: 'Guruvayoor/guruvayur-temple.jpg',
@@ -309,7 +309,7 @@
                 trivandrum: 'thiruvanthapuram.jpg',
                 wayanad: 'wayanad.jpg',
                 guruvayoor: 'Guruvayoor/guruvayur-temple.jpg',
-                kannur: 'Kannur Temple Visit/mridanga saileswari.jpg'
+                kannur: 'Kannur_Temple_Visit/mridanga saileswari.jpg'
             };
 
             const descriptions = {
