Update hero layout: removed center text/logo, properly centered mobile view cards.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="logo">Nightingale Holidays</div>
+            <div class="logo">
+                <img src="logo.png" alt="Nightingale Holidays Logo">
+            </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -107,7 +109,6 @@
                 <!-- Layer 3: Large Centered Heading Text (Top) -->
                 <div class="hero-text-layer">
                     <div class="text-block block-0 active">
-                        <h1 class="main-title">Nightingale<br>Holidays</h1>
                         <p class="hero-subtitle">EXPLORE BEYOND LIMITS</p>
                     </div>
                 </div>
