Fix deployment configs, case sensitivity, and remove package.json for Vercel static deploy

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1034,14 +1034,14 @@
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/mridanga saileswari.jpg" alt="Mridanga Saileswari">
+                            <img src="Kannur_Temple_Visit/mridanga saileswari.jpg" alt="Mridanga Saileswari">
                             <div class="gallery-overlay">
                                 <h4>Mridanga Saileswari</h4>
                                 <p>Divine Resonance</p>
                             </div>
                         </div>
                         <div class="gallery-box">
-                            <img src="Kannur Temple Visit/parasanikadavu.jfif" alt="Parassanikadavu">
+                            <img src="Kannur_Temple_Visit/parasanikadavu.jfif" alt="Parassanikadavu">
                             <div class="gallery-overlay">
                                 <h4>Parassanikadavu</h4>
                                 <p>Muthappan's Abode</p>
