Fix stats section alignment: stack and center vertically on mobile view instead of horizontal overflow.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="container">
                 <!-- Integrated Stats Grid -->
                 <div class="stats-grid-modern"
-                    style="margin-bottom: 80px; border-bottom: 1px solid rgba(255,255,255,0.05); padding-bottom: 60px; grid-template-columns: repeat(3, 1fr);">
+                    style="margin-bottom: 80px; border-bottom: 1px solid rgba(255,255,255,0.05); padding-bottom: 60px;">
                     <div class="stat-card">
                         <div class="stat-icon-lux"><i class="fas fa-map-marked-alt"></i></div>
                         <div class="stat-main">
