--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nightingale Holidays | Journey Beyond Every Destination</title>
     <meta name="description"
         content="Luxury travel agency specializing in premium experiences and cinematic journeys around the world.">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -1156,7 +1156,7 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=3"></script>
 
 
 
